2010-11-29 Stanislas Rolland  <typo3@sjbr.ca>
	* Restored missing entry in Changelog
	* Fixed bug #11149(Forge): Extension Manager issues warning regarding class tx_srfeuserregister_lib_conf
	* Fixed issue #11150(Forge): Remove references to obsolete extension patch1822

2010-11-19 Franz Holzinger  <franz@ttproducts.de>
	* new feature: use v_dear_male or v_dear_female instead of v_dear if a gender has been entered
	* complete the contributor list in contributors.txt
	* fix bug 16132: image is missing at CREATE and INVITE

2010-10-21 Franz Holzinger  <franz@ttproducts.de>
	* fix bug 15281: the authorization in the confirmation link did not work with multiple FE groups because the comma had been HTML encoded
	* fix bug 15225: Form token is empty

2010-10-17 Stanislas Rolland  <typo3@sjbr.ca>
	* Updated manual
	* Fix XCLASS keys of files model/class.tx_srfeuserregister_model_table_base.php and model/class.tx_srfeuserregister_model_conf.php
	* Version 2.6.1

2010-10-14 Franz Holzinger  <franz@ttproducts.de>
	* fix bug 15271: When logged in, edit form is shown instead of "click_here_to_edit"-link
	* fix bug 15660: locallang.xml has become invalid
	* fix bug 14976: PHP Warning: explode() expects parameter 2 to be string
	* fix bug 15176: no first_name and last_name for TYPO3 4.4+
	* Fix security issue: CSS with first_name and last_name
	* Fix bug 15664: replace marker ###LABEL_V_EMAIL_LOST_PASSWORD### by ###LABEL_V_INFOMAIL_LOST_PASSWORD###
	* Fix bug 14936: restore the edit link

2010-06-26 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: a md5 encoded password must be shown as clear text in the password marker
	* fix bug: if enableHTMLMail is 1, then the admin must always receive a HTML email independant from the FE users preferences
	* new feature: useLocalCountry to show the country names in their local languages
	* remove support for old styled template